--- a/signalr-client-sdk/build.gradle
+++ b/signalr-client-sdk/build.gradle
@@ -10,8 +10,8 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'org.java-websocket:java-websocket:1.3.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'org.java-websocket:java-websocket:1.3.1'
 }
 
